fixed sagas problem in fetch, log in with email works fine, facebook login/signup configuration added

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/drawer": "^5.7.5",
     "@react-navigation/native": "^5.4.0",
     "@react-navigation/stack": "^5.3.7",
+    "axios": "^0.19.2",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-button": "^3.0.1",
+    "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
