--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.2",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
+    "normalizr": "^3.6.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-button": "^3.0.1",
