--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.4.0",
     "@react-navigation/stack": "^5.3.7",
     "axios": "^0.19.2",
+    "buffer": "^5.6.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "normalizr": "^3.6.0",
@@ -30,6 +31,7 @@
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
+    "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
