--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "buffer": "^5.6.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
+    "moment": "^2.26.0",
     "normalizr": "^3.6.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
