--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-screens": "^2.7.0",
     "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^6.6.0",
+    "react-navigation-addon-search-layout": "^0.14.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.5",
