--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-star-rating": "^1.1.0",
     "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation-addon-search-layout": "^0.14.1",
